<resources>
    <string name="app_name">TTB</string>
    <string name="welcome_this_app_will_help_you_orgenize_all_heatboxes_in_one_and_same_place_start_by_pressing_connect">Welcome! This app will help you orgenize all heatboxes in one and same place. Start by pressing connect.</string>
    <string name="logo">logo</string>
    <string name="button">Button</string>
    <string name="connect">Connect!</string>
    <string name="box_1">Box 1</string>
    <string name="save">Save</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Disconnect">Disconnect</string>

</resources>
